trying to stop top menu from disappearing on mobile

--- a/src/components/layout/mrsi-banner/mrsi-banner2.module.css
+++ b/src/components/layout/mrsi-banner/mrsi-banner2.module.css
@@ -28,7 +28,7 @@
 }
 
 .menu {
-  display: none;
+
 }
 
 @media (max-width: 525px) {
